Partie 9 en cours